# snipp-py

./: README.md  pyproject.toml
snipp/: __init__.py  client.py  errors.py
