[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "snipp-py"
version = "1.0.0"
description = "Python API wrapper for Snipp"
requires-python = ">=3.9"
license = "MIT"
dependencies = ["requests"]

[project.urls]
Homepage = "https://snipp.gg"
