[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snipp"
version = "1.0.1"
description = "Python API wrapper for Snipp"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
keywords = ["clips", "upload", "snipp", "images", "share", "api"]
dependencies = ["requests"]

[project.urls]
Homepage = "https://docs.snipp.gg/sdks/python"
Repository = "https://github.com/snipp-gg/snipp-py"
Issues = "https://github.com/snipp-gg/snipp-py/issues"